Fix typo and PR to main

--- a/source.tex
+++ b/source.tex
@@ -122,12 +122,12 @@
   \resumeSubHeadingListEnd
 
 % REMOVE HERE FOR ONE PAGE
-% \resumeSubHeadingListStart
-%     \resumeSubheading
-%       {Carnegie Vanguard High School}{Aug. 2018 – May 2022}
-%       {GPA 4.70 / 4.00}{Houston, TX}
-%       \resumeSubSubheading{Significant Activities: International Thespian Society, National Honor Society, Interact}{}
-%   \resumeSubHeadingListEnd
+\resumeSubHeadingListStart
+    \resumeSubheading
+      {Carnegie Vanguard High School}{Aug. 2018 – May 2022}
+      {GPA 4.70 / 4.00}{Houston, TX}
+      \resumeSubSubheading{Significant Activities: International Thespian Society, National Honor Society, Interact}{}
+  \resumeSubHeadingListEnd
 % END REMOVE
 
 
@@ -140,7 +140,7 @@
       2023 – Present} {Course Assistant for Data Structures}{Somerville, MA} \resumeItemListStart \resumeItem{Host office
       hours aiding students in course assignments and explaining lecture topics}
       \resumeItem{Deliver comprehensive lectures about topics and reinforce concepts via coding
-      excercises for weekly 30+ student lab} 
+      exercises for weekly 30+ student lab} 
       \resumeItem{Grade student assignments by studying submissions
       for functionality, testing, and course coding standards}
       \resumeItem{Contribute to course infrastructure—autograding
@@ -166,23 +166,23 @@
         \resumeItem{Service community via organizing mail, and analyzing building usage for largest academic buildings on campus}
       \resumeItemListEnd
 
-    % \resumeSubheading
-    %   {Texas Heart Institute}{May 2021 – Aug 2021}
-    %   {Visual Communications Intern}{Houston, TX}
-    %   \resumeItemListStart
-    %     \resumeItem{Designed graphics and created animations representing cardiological research for publicity}
-    %     \resumeItem{Interviewed for animation work by the \textit{Houston Chronicle}}
-    % \resumeItemListEnd
+    \resumeSubheading
+      {Texas Heart Institute}{May 2021 – Aug 2021}
+      {Visual Communications Intern}{Houston, TX}
+      \resumeItemListStart
+        \resumeItem{Designed graphics and created animations representing cardiological research for publicity}
+        \resumeItem{Interviewed for animation work by the \textit{Houston Chronicle}}
+    \resumeItemListEnd
 
 % REMOVE HERE FOR ONE PAGE
       % \resumeSubheading
-      % {Carnegie Theatre Company}{Aug. 2018 – May 2022}
-      % {Webmaster, Media Designer}{Houston, TX}
-      % \resumeItemListStart
-      %   \resumeItem{Maintained website, social media, ticket sales, and production marketing graphics.}
-      %   \resumeItem{Designed live projections, edited videos, and rigged lights for productions.}
-      %   \resumeItem{Recognized by the International Thespian Society for work on theatrical marketing.}
-      % \resumeItemListEnd
+      {Carnegie Theatre Company}{Aug. 2018 – May 2022}
+      {Webmaster, Media Designer}{Houston, TX}
+      \resumeItemListStart
+        \resumeItem{Maintained website, social media, ticket sales, and production marketing graphics.}
+        \resumeItem{Designed live projections, edited videos, and rigged lights for productions.}
+        \resumeItem{Recognized by the International Thespian Society for work on theatrical marketing.}
+      \resumeItemListEnd
 % END REMOVE
 
   \resumeSubHeadingListEnd
@@ -197,13 +197,13 @@
           \resumeItem{Published application to personal website with custom autocomplete search bar and tracked development with Git}
           \resumeItemListEnd
     % \resumeProjectHeading
-    %       {\textbf{JetLag} $|$ \emph{Python}}{Mar. 2023 – Present}
-    %       \resumeItemListStart
-    %         \resumeItem{Construct a REMOVE THIS NOW tool to aid sleeptime changes when traveling between timezones during air travel,
-    %         given flight details (e.g. airports, departure and arrival
-    %         times)}
-    %         \resumeItem{Craft using Python \texttt{tz} library and database of IATA-recognised airports to parse user input to calculations}
-    %       \resumeItemListEnd
+          {\textbf{JetLag} $|$ \emph{Python}}{Mar. 2023 – Present}
+          \resumeItemListStart
+            \resumeItem{Construct a REMOVE THIS NOW tool to aid sleeptime changes when traveling between timezones during air travel,
+            given flight details (e.g. airports, departure and arrival
+            times)}
+            \resumeItem{Craft using Python \texttt{tz} library and database of IATA-recognised airports to parse user input to calculations}
+          \resumeItemListEnd
       % GAMING, WEBDEV
       \resumeProjectHeading
           {\textbf{IATA Guesser} $|$ \emph{JavaScript, HTML, CSS}}{Jul. 2023}
@@ -212,19 +212,19 @@
             \resumeItem{Used Toastr for popups reflecting answer and created a custom autocomplete search box}
           \resumeItemListEnd
       % DATA SCIENCE
-      % \resumeProjectHeading
-      %     {\textbf{IATA Country Sorter} $|$ \emph{Python}}{Jul. 2023}
-      %     \resumeItemListStart
-      %       \resumeItem{Invented a sorting script that maps inputted IATA airport codes into an output file for their country.}
-      %       \resumeItem{Used for searching for flights by country in ITA Matrix}
-      %     \resumeItemListEnd
+      \resumeProjectHeading
+          {\textbf{IATA Country Sorter} $|$ \emph{Python}}{Jul. 2023}
+          \resumeItemListStart
+            \resumeItem{Invented a sorting script that maps inputted IATA airport codes into an output file for their country.}
+            \resumeItem{Used for searching for flights by country in ITA Matrix}
+          \resumeItemListEnd
       % MACHINE STRUCTURE
-      % \resumeProjectHeading
-      %     {\textbf{arith} $|$ \emph{C, Makefile, Bash}}{Oct. 2023}
-      %     \resumeItemListStart
-      %       \resumeItem{Wrote a low-level, multi-phase JPEG-style compressor/decompressor with a partner}
-      %       \resumeItem{Learned how to perform floating point arithmetic and pack/unpack binary data modularly}
-      %     \resumeItemListEnd
+      \resumeProjectHeading
+          {\textbf{arith} $|$ \emph{C, Makefile, Bash}}{Oct. 2023}
+          \resumeItemListStart
+            \resumeItem{Wrote a low-level, multi-phase JPEG-style compressor/decompressor with a partner}
+            \resumeItem{Learned how to perform floating point arithmetic and pack/unpack binary data modularly}
+          \resumeItemListEnd
       \resumeProjectHeading
           {\textbf{vfl} $|$ \emph{C, Python, Makefile, Bash}}{Oct. 2023 – Feb. 2024}
           \resumeItemListStart
@@ -234,17 +234,17 @@
           an airport, given its code}
           \resumeItemListEnd
     %   ALGOS
-    %   \resumeProjectHeading
-    %       {\textbf{gerp} $|$ \emph{C++, Makefile, Bash}}{Apr. 2023 – May 2023}
-    %       \resumeItemListStart
-    %         \resumeItem{Built a program with partner that searches for user-queried text from specified directory}
-    %         \resumeItem{Designed with dictionary ADT, where dictionary stores words and filepath, and collaborated via Git}
-    %       \resumeItemListEnd
-    %   \resumeProjectHeading
-    %       {\textbf{zap} $|$ \emph{C++, Makefile, Bash}}{Apr. 2023}
-    %       \resumeItemListStart
-    %       \resumeItem{Wrote a Huffman compressor/decompressor for text files and practiced using priority queue ADT and recursion}
-    %       \resumeItemListEnd
+      \resumeProjectHeading
+          {\textbf{gerp} $|$ \emph{C++, Makefile, Bash}}{Apr. 2023 – May 2023}
+          \resumeItemListStart
+            \resumeItem{Built a program with partner that searches for user-queried text from specified directory}
+            \resumeItem{Designed with dictionary ADT, where dictionary stores words and filepath, and collaborated via Git}
+          \resumeItemListEnd
+      \resumeProjectHeading
+          {\textbf{zap} $|$ \emph{C++, Makefile, Bash}}{Apr. 2023}
+          \resumeItemListStart
+          \resumeItem{Wrote a Huffman compressor/decompressor for text files and practiced using priority queue ADT and recursion}
+          \resumeItemListEnd
     \resumeSubHeadingListEnd
 
 
@@ -269,7 +269,7 @@
      \textbf{Media}{: Droneography, Photoshop, Lightroom, After Effects, Davinci Resolve Studio, Premiere Pro, InDesign, Wordpress} \\
      \textbf{Travel}{: Hiking mountains, traveling to novel destinations, searching for amazing flight deals} \\
      \textbf{Standards}{: Expert in recalling IATA airport codes, ISO country codes, and timezones} \\
-    %  \textbf{Woodworking}{: Prowess using power tools like a saw (miter, table, band) and drill} \\
+     \textbf{Woodworking}{: Prowess using power tools like a saw (miter, table, band) and drill} \\
      
     }}
  \end{itemize}
