Add Tufts Daily

--- a/source.tex
+++ b/source.tex
@@ -174,8 +174,17 @@
         \resumeItem{Interviewed for animation work by the \textit{Houston Chronicle}}
     \resumeItemListEnd
 
+    \resumeSubheading
+    {\textit{The Tufts Daily}}{Sept. 2022 – May 2023}
+    {Assistant Features Editor}{Somerville, MA}
+    \resumeItemListStart
+    \resumeItem{Wrote original, informational pieces about the Tufts community
+    using primary sources gathered in one-on-one interviews with community members}
+      \resumeItem{Edited section articles before being released to the public}
+  \resumeItemListEnd
+
 % REMOVE HERE FOR ONE PAGE
-      % \resumeSubheading
+      \resumeSubheading
       {Carnegie Theatre Company}{Aug. 2018 – May 2022}
       {Webmaster, Media Designer}{Houston, TX}
       \resumeItemListStart
@@ -196,10 +205,10 @@
           \resumeItem{Designed using Maptiler and OpenStreetMap for map, and modeled UI with Figma}
           \resumeItem{Published application to personal website with custom autocomplete search bar and tracked development with Git}
           \resumeItemListEnd
-    % \resumeProjectHeading
+    \resumeProjectHeading
           {\textbf{JetLag} $|$ \emph{Python}}{Mar. 2023 – Present}
           \resumeItemListStart
-            \resumeItem{Construct a REMOVE THIS NOW tool to aid sleeptime changes when traveling between timezones during air travel,
+            \resumeItem{Construct a tool to aid sleeptime changes when traveling between timezones during air travel,
             given flight details (e.g. airports, departure and arrival
             times)}
             \resumeItem{Craft using Python \texttt{tz} library and database of IATA-recognised airports to parse user input to calculations}
