--- a/source.tex
+++ b/source.tex
@@ -149,7 +149,7 @@
 
       
     \resumeSubheading
-      {Tufts JumboCode}{September 2023 – Present}
+      {Tufts JumboCode}{Sept. 2023 – Present}
       {Developer}{Somerville, MA}
       \resumeItemListStart
         \resumeItem{Develop an app benefiting the Emerald Necklace Conservancy educating visitors on preservation}
@@ -167,7 +167,7 @@
       \resumeItemListEnd
 
     \resumeSubheading
-      {Texas Heart Institute}{May 2021 – Aug 2021}
+      {Texas Heart Institute}{May 2021 – Aug. 2021}
       {Visual Communications Intern}{Houston, TX}
       \resumeItemListStart
         \resumeItem{Designed graphics and created animations representing cardiological research for publicity}
