Add new gitignore

--- a/main.tex
+++ b/main.tex
@@ -118,5 +118,5 @@
     \resumeSubHeadingListEnd
 \section{Skills and Interests}
 
-    \input{components/skills}
+    \input{components/skills.tex}
 \end{document}
