--- a/components/experience/jumbocode.tex
+++ b/components/experience/jumbocode.tex
@@ -1,4 +1,17 @@
-cpom
+% jumbocode.tex
+% TODO: More descriptors about what you did
+% Talk heavily about the role in the project
+% What tickets you were involved in
+% Maintainablity
+% Scalability
+% HTTP Auth
+% Styling
+% Scrolling??
+% Comments: 
+% 
+% 
+% 
+% 
 
 \resumeSubheading
       {Tufts JumboCode}{Sept. 2023 – Present}
