Fix spacing and about to remove information

--- a/components/skills.tex
+++ b/components/skills.tex
@@ -1,3 +1,14 @@
+% skills.tex
+% 
+% 
+% TODO: Add DevOps, GH Actions
+% TODO: Move technical topics to experience and projects
+% Comments: 
+% 
+% 
+% 
+% 
+
 \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
      \textbf{Programming Languages}{: C/C++, Python, x86-64 Assembly, JavaScript, TypeScript, HTML/CSS, R, SQL, LaTeX} \\
