--- a/resume.tex
+++ b/resume.tex
@@ -1,4 +1,4 @@
-\documentclass[letterpaper,11pt]{article}
+\documentclass[letterpaper,10pt]{article}
 
 \usepackage{latexsym}
 \usepackage[empty]{fullpage}
@@ -95,11 +95,11 @@
 \begin{document}
 
 \input{components/background.tex}
-
+\vspace{-8.5mm} % For compressing
 \section{Education}
 
 \input{components/education/tufts.tex}
-
+\vspace{-6mm} % For compressing
 \section{Experience}
 \resumeSubHeadingListStart
 
@@ -109,6 +109,8 @@
 
   \resumeSubHeadingListEnd
 
+  \vspace{-6mm} % For compressing
+
 \section{Relevant Projects}
     \resumeSubHeadingListStart
 
@@ -116,6 +118,8 @@
      \input{components/projects/vfl}
      \input{components/projects/world-clock}
     \resumeSubHeadingListEnd
+  \vspace{-6mm} % For compressing
+
 \section{Skills and Interests}
 
     \input{components/skills.tex}
