Add more detail Jumbocode

--- a/components/experience/jumbocode.tex
+++ b/components/experience/jumbocode.tex
@@ -14,11 +14,14 @@
 % 
 
 \resumeSubheading
-      {Tufts JumboCode}{Sept. 2023 – Present}
-      {Developer}{Somerville, MA}
-      \resumeItemListStart
-        \resumeItem{Develop an app benefiting the Emerald Necklace Conservancy educating visitors on preservation}
-        \resumeItem{Design a full-stack web application using React, MongoDB, Bun}
-        \resumeItem{Practice team-based coding powered by Git and GitHub collaboration tools}
-        \resumeItemListEnd
+      {Tufts JumboCode}{Sept. 2023 – May. 2024}
+      {Full Stack Developer}{Somerville, MA}
+      \resumeItemListStart 
+        \resumeItem{Developed an app helping the Emerald Necklace Conservancy inform visitors about
+        the organization's parks through an interactive, animated full-stack web app. }
+      \resumeItem{Connected information with MongoDB database protected with
+      HTTPAuth for admin to maintain and update page information.}
+      \resumeItem{Created and documented React components for team to reuse in
+      building a cohesive user interface across all pages.}
+    \resumeItemListEnd
 
