--- a/components/skills.tex
+++ b/components/skills.tex
@@ -11,8 +11,10 @@
 
 \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
-     \textbf{Programming Languages}{: C/C++, Python, x86-64 Assembly, JavaScript, TypeScript, HTML/CSS, R, SQL, LaTeX} \\
-     \textbf{Frameworks and Environments}{: React, React Native, Node.js, MongoDB, Bun} \\
+     \textbf{Programming Languages}{: C/C++, Python, x86-64 Assembly, JavaScript, TypeScript, 
+     HTML/CSS, R, SQL, LaTeX} \\
+     \textbf{Frameworks and Environments}{: React, React Native, Node.js, 
+     MongoDB, Bun} \\
      \textbf{Technical Topics}{: Software testing, object-oriented design,
      encrypted network programming, machine arithmetic, memory hierarchy
      (especially cache structures), performance analytics, data structures,
@@ -23,8 +25,10 @@
      OpenStreetMap, qGIS)} \\
      \textbf{Python Modules}{: pandas, matplotlib, sys, select, socket, tz} \\
      \textbf{Spoken Languages}{: Proficiency in English, Hindi, Spanish, and French} \\
-     \textbf{Media}{: Droneography, Photoshop, Lightroom, After Effects, Davinci Resolve Studio, Premiere Pro, InDesign, Wordpress} \\
-     \textbf{Travel}{: Hiking mountains, traveling to novel destinations, searching for amazing flight deals} \\
+     \textbf{Media}{: Droneography, Photoshop, Lightroom, After Effects, Davinci Resolve Studio, 
+     Premiere Pro, InDesign, Wordpress} \\
+     \textbf{Travel}{: Hiking mountains, traveling to novel destinations, 
+     searching for amazing flight deals} \\
      \textbf{Standards}{: Expert in recalling IATA airport codes, ISO country codes, and timezones} \\
      \textbf{Woodworking}{: Prowess using power tools like a saw (miter, table, band) and drill} \\
      
