--- a/components/experience/asm.tex
+++ b/components/experience/asm.tex
@@ -2,5 +2,6 @@
 {Tufts University, Office of Academic Space Management}{May 2023 – Present}
 {Receptionist}{Somerville, MA}
 \resumeItemListStart
-  \resumeItem{Service community via organizing mail, and analyzing building usage for largest academic buildings on campus}
+\resumeItem{Service community via organizing mail, and analyzing building usage
+for largest academic buildings on Tufts campus.}
 \resumeItemListEnd
