Edit projects' info

--- a/components/education/tufts.tex
+++ b/components/education/tufts.tex
@@ -1,6 +1,6 @@
 \resumeSubHeadingListStart
     \resumeSubheading
-      {Tufts University}{Aug. 2022 -- May 2026}
+      {Tufts University}{August 2022 – May 2026}
       {GPA 3.85, BS Computer Science, BS Mathematics}{Somerville, MA}
       \resumeSubSubheading{Relevant Coursework: Algorithms, Network security, Machine structure, Assembly programming}{}
       \resumeSubSubheading{Data structures, Multivariable calculus, Linear algebra}{}{}{}
