--- a/components/experience/jumbocode.tex
+++ b/components/experience/jumbocode.tex
@@ -21,7 +21,7 @@
         the organization's parks through an interactive, animated full-stack web app. }
       \resumeItem{Connected information with MongoDB database protected with
       HTTPAuth for admin to maintain and update page information.}
-      \resumeItem{Created and documented React components for team to reuse in
+      \resumeItem{Created and documented React components in TypeScript for team to reuse in
       building a cohesive user interface across all pages.}
     \resumeItemListEnd
 
