--- a/components/projects/um.tex
+++ b/components/projects/um.tex
@@ -1,10 +1,11 @@
 \resumeProjectHeading
-    {\textbf{Universal Machine} $|$ \emph{C, x86-64 Assembly, Makefile,
-    Bash}}{Nov. – Dec. 2023}
+    {\textbf{Universal Machine} $|$ \emph{C, x86-64 Assembly, Bash}}{November – December 2023}
         \resumeItemListStart
-  \resumeItem{Created a virtual machine tested with custom-devised unit-testing framework}
-    \resumeItem{Profiled the program by analyzing x86-64 Assembly machine code
-    and \texttt{qcachegrind}}
-  \resumeItem{Recreated the venerable HP15-C via Assembly code derived from
-  the Universal Machine's ISA}
+    \resumeItem{Created a Turing Complete virtual machine supporting I/O, machine arithmetic,
+    logic, and memory tested with custom-devised unit-testing framework.}
+    \resumeItem{Optimized the program by analyzing x86-64 Assembly instructions
+    and \texttt{qcachegrind} and minimized expensive operations such as
+    dereferencing or allocation through reuse of memory.}
+  \resumeItem{Recreated the venerable HP15-C via Assembly instructions derived from
+  the Universal Machine's ISA.}
         \resumeItemListEnd
