--- a/components/projects/vfl.tex
+++ b/components/projects/vfl.tex
@@ -1,7 +1,8 @@
 \resumeProjectHeading
-          {\textbf{vfl} $|$ \emph{C, Python, Makefile, Bash}}{Oct. 2023 – Feb. 2024}
+          {\textbf{vfl} $|$ \emph{C, Python}}{October 2023 – February 2024}
           \resumeItemListStart
-          \resumeItem{Authored a program that reads/writes binary files representing flight itineraries}
+          \resumeItem{Designed a file format that encode flight itineraries into
+          bitpacked data.}
           \resumeItem{Wrote a collection of Python modules that aid the
           compression, like quantizing timezones, or finding the UTC offset of
           an airport, given its code}
