--- a/components/projects/world-clock.tex
+++ b/components/projects/world-clock.tex
@@ -1,7 +1,9 @@
 \resumeProjectHeading
-        {\textbf{World Clock} $|$ \emph{JavaScript, HTML, CSS}}{Aug. 2023}
+        {\textbf{World Clock} $|$ \emph{JavaScript, HTML, CSS}}{August 2023}
         \resumeItemListStart
-          \resumeItem{Created a web application showing the time of chosen cities, with a helpful interactive map to aid in visualization}
-          \resumeItem{Designed using Maptiler and OpenStreetMap for map, and modeled UI with Figma}
+        \resumeItem{Constructed a web application showing the time of user-chosen
+        cities, with a helpful, responsive map to aid in visualization.}
+        \resumeItem{Integrated OpenStreetMap and MapBox libraries for graphics.
+        APIs were chosen as they best met the scalability requirements.}
           \resumeItem{Published application to personal website with custom autocomplete search bar and tracked development with Git}
           \resumeItemListEnd
