--- a/components/skills.tex
+++ b/components/skills.tex
@@ -11,19 +11,19 @@
 
 \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
-     \textbf{Programming Languages}{: C/C++, Python, x86-64 Assembly, JavaScript, TypeScript, 
-     HTML/CSS, R, SQL, LaTeX} \\
-     \textbf{Frameworks and Environments}{: React, React Native, Node.js, 
-     MongoDB, Bun} \\
-     \textbf{Technical Topics}{: Software testing, object-oriented design,
-     encrypted network programming, machine arithmetic, memory hierarchy
-     (especially cache structures), performance analytics, data structures,
-     algorithms, compilers} \\
-     \textbf{Developer Tools}{: Linux/UNIX terminal, shell scripting,
-     Git/GitHub-assisted development, GCC, Makefile, Figma} \\
-     \textbf{JavaScript APIs}{: Mapping APIs (e.g. MapBox, Maplibre, LeafletJS,
-     OpenStreetMap, qGIS)} \\
-     \textbf{Python Modules}{: pandas, matplotlib, sys, select, socket, tz} \\
+     \textbf{Programming Languages}{: C/C++, Python, x86-64 Assembly, TypeScript, React, Node.js} \\
+     \textbf{Tools and Technologies}{: DevOps, Docker, MongoDB, SQL, Tailwind CSS} \\
+    %  \textbf{Frameworks and Environments}{: React, React Native, Node.js, 
+    %  MongoDB, Bun} \\
+    %  \textbf{Technical Topics}{: Software testing, object-oriented design,
+    %  encrypted network programming, machine arithmetic, memory hierarchy
+    %  (especially cache structures), performance analytics, data structures,
+    %  algorithms, compilers} \\
+    %  \textbf{Developer Tools}{: Linux/UNIX terminal, shell scripting,
+    %  Git/GitHub-assisted development, GCC, Makefile, Figma} \\
+    %  \textbf{JavaScript APIs}{: Mapping APIs (e.g. MapBox, Maplibre, LeafletJS,
+    %  OpenStreetMap, qGIS)} \\
+    %  \textbf{Python Modules}{: pandas, matplotlib, sys, select, socket, tz} \\
      \textbf{Spoken Languages}{: Proficiency in English, Hindi, Spanish, and French} \\
      \textbf{Media}{: Droneography, Photoshop, Lightroom, After Effects, Davinci Resolve Studio, 
      Premiere Pro, InDesign, Wordpress} \\
