--- a/resume.tex
+++ b/resume.tex
@@ -1,6 +1,6 @@
 
 
-\documentclass[letterpaper,10pt]{article}
+\documentclass[letterpaper,9pt]{article}
 
 \usepackage{latexsym}
 \usepackage[empty]{fullpage}
@@ -8,7 +8,7 @@
 \usepackage{marvosym}
 \usepackage[usenames,dvipsnames]{color}
 \usepackage{verbatim}
-\usepackage{enumitem}
+\usepackage{enumitem} 
 \usepackage[hidelinks]{hyperref}
 \usepackage{fancyhdr}
 \usepackage[english]{babel}
@@ -101,7 +101,7 @@
 \section{Education}
 
 \input{components/education/tufts.tex}
-\vspace{-6mm} % For compressing
+\vspace{-5mm} % For compressing
 \section{Experience}
 \resumeSubHeadingListStart
 
@@ -119,6 +119,10 @@
      \input{components/projects/um}
      \input{components/projects/vfl}
      \input{components/projects/world-clock}
+     \input{components/projects/encrypted-im}
+     \input{components/projects/ssh-setup}
+
+     
     \resumeSubHeadingListEnd
   \vspace{-6mm} % For compressing
 
