--- a/components/background.tex
+++ b/components/background.tex
@@ -1,7 +1,7 @@
 \begin{center}
     \textbf{\Huge \scshape Vedant Modi} \\ 
     \vspace{1pt}
-    \small \href{tel:+16176829656}{+1 (617) 682-9656} $|$ 
+    \small \input{components/contacts/telephone.tex} $|$ 
     \href{mailto:vedant@vedantmodi.com}{\underline{vedant@vedantmodi.com}} $|$ 
     \href{https://www.vedantmodi.com}{\underline{vedantmodi.com}} $|$
     \href{https://github.com/thevedantmodi}{\underline{github.com/thevedantmodi}} $|$
