--- a/components/projects/vfl.tex
+++ b/components/projects/vfl.tex
@@ -1,9 +1,9 @@
 \resumeProjectHeading
           {\textbf{vfl} $|$ \emph{C, Python}}{October 2023 – February 2024}
           \resumeItemListStart
-          \resumeItem{Designed a file format that encode flight itineraries into
+          \resumeItem{Designed a file format that encodes flight itineraries into
           bitpacked data.}
           \resumeItem{Wrote a collection of Python modules that aid the
           compression, like quantizing timezones, or finding the UTC offset of
-          an airport, given its code}
+          an airport, given its code.}
           \resumeItemListEnd
