Add arith and shuffle projects

--- a/components/projects/arith.tex
+++ b/components/projects/arith.tex
@@ -1,6 +1,8 @@
 \resumeProjectHeading
-{\textbf{arith} $|$ \emph{C, Makefile, Bash}}{Oct. 2023}
+{\textbf{arith} $|$ \emph{C}}{October 2023}
 \resumeItemListStart
-  \resumeItem{Wrote a low-level, multi-phase JPEG-style compressor/decompressor with a partner}
-  \resumeItem{Learned how to perform floating point arithmetic and pack/unpack binary data modularly}
+\resumeItem{Wrote a JPEG-style compressor/decompressor
+utilizing a block-wise transformation. }
+\resumeItem{Broke transformation into separate modules to thoroughly test
+functionality in each step.}
 \resumeItemListEnd
