Compress relevant coursework

--- a/components/education/tufts.tex
+++ b/components/education/tufts.tex
@@ -2,6 +2,7 @@
     \resumeSubheading
       {Tufts University}{August 2022 – May 2026}
       {GPA 3.85, BS Computer Science, BS Mathematics}{Somerville, MA}
-      \resumeSubSubheading{{Relevant Coursework}: Algorithms, Network security, Machine structure, Assembly programming}{}
-      \resumeSubSubheading{Data structures, Multivariable calculus, Linear algebra}{}{}{}
+    \resumeSubSubheading{{Relevant Coursework}: Algorithms, Network security,
+    Machine structure, Data structures, Multivariable calculus, Linear algebra}{}
+      \resumeSubSubheading{}{}{}{}
   \resumeSubHeadingListEnd
