--- a/components/experience/cs40-ca.tex
+++ b/components/experience/cs40-ca.tex
@@ -1,8 +1,6 @@
 \resumeSubheading {Tufts University, Department of Computer Science}{May
-2023 – Present} {Course Assistant for Machine Structure, Assembly Programming,
-and Data Structures}{Somerville, MA}
+2024 – Present} {Course Assistant for Machine Structure}{Somerville, MA}
  \resumeItemListStart 
-%  TODO: Add content for 40
  \resumeItem{Host office
 hours aiding students in course assignments and explaining lecture topics}
 \resumeItem{Deliver comprehensive lectures about topics and reinforce concepts via coding
