Patch details on newer software positions

--- a/components/experience/asm.tex
+++ b/components/experience/asm.tex
@@ -1,6 +1,6 @@
 \resumeSubheading
-{Tufts University, Office of Academic Space Management}{May 2023 – Present}
-{Receptionist}{Somerville, MA}
+{Receptionist}{May 2023 – Present}
+{Tufts University, Office of Academic Space Management}{Somerville, MA}
 \resumeItemListStart
 \resumeItem{Service community via organizing mail, and analyzing building usage
 for largest academic buildings on Tufts campus.}
