--- a/components/experience/cs15-ca.tex
+++ b/components/experience/cs15-ca.tex
@@ -1,14 +1,47 @@
-\resumeSubheading {Tufts University, Department of Computer Science}{May
-2023 – Present} {Course Assistant for Machine Structure, Assembly Programming,
-and Data Structures}{Somerville, MA}
+\resumeSubheading {Course Assistant for Machine Structure, Assembly Programming,
+and Data Structures}{May
+2023 – Present} {Tufts University, Department of Computer Science}{Somerville, MA}
  \resumeItemListStart 
-%  TODO: Add content for 40
- \resumeItem{Host office
-hours aiding students in course assignments and explaining lecture topics}
-\resumeItem{Deliver comprehensive lectures about topics and reinforce concepts via coding
-exercises for weekly 30+ student lab} 
-\resumeItem{Grade student assignments by studying submissions
-for functionality, testing, and course coding standards}
-\resumeItem{Contribute to course infrastructure—autograding
-software, unit tests, organizing TA grading, and project solutions} 
+
+\resumeItem{Strengthened course infrastructure for \textbf{200+ students} by improving
+autograding software, staff software, and assignment solutions}
+
+\resumeItem{Contributed\textbf{ 20+ unit tests }to autograder by finding edge behavior in
+students' submissions}
+
+\resumeItem{Developed internal software to organize scoring of submissions between course
+ staff}
+
+ \resumeItem{Graded assignments by studying \textbf{60+ submissions }
+ for functionality, testing, and course coding standards}
+
+ \resumeItem{Reinforced course objectives during \textbf{1500+ student interactions} by
+ explaining lecture topics and assignments in office hours}
+% TODO
+ \resumeItem{Strengthened understanding of course material weekly for a \textbf{30+ student lab} by delivering comprehensive
+ lectures}
+
+ 
 \resumeItemListEnd
+
+
+% Accomplished X as measured by Y by doing Z
+% 
+% 
+% 
+% 
+% 
+% 
+% 
+% 
+% 
+% 
+% 
+%
+% 
+% 
+
+
+
+
+
