--- a/components/experience/jumbocode.tex
+++ b/components/experience/jumbocode.tex
@@ -14,14 +14,40 @@
 % 
 
 \resumeSubheading
-      {Tufts JumboCode}{Sept. 2023 – May. 2024}
-      {Full Stack Developer}{Somerville, MA}
+      {Full Stack Developer}{Sept. 2023 – May. 2024}
+      {Tufts JumboCode}{Somerville, MA}
       \resumeItemListStart 
-        \resumeItem{Developed an app helping the Emerald Necklace Conservancy inform visitors about
-        the organization's parks through an interactive, animated full-stack web app. }
-      \resumeItem{Connected information with MongoDB database protected with
-      HTTPAuth for admin to maintain and update page information.}
-      \resumeItem{Created and documented React components in TypeScript for team to reuse in
-      building a cohesive user interface across all pages.}
+        \resumeItem{Enhanced the visitor information portal for the \textbf{1,000,000+
+        visitors} of the Emerald Necklace Conservancy by designing an full-stack
+        web app with a tight-knit team }
+      \resumeItem{Created a secure page modification system for park administration by
+      maintaining a MongoDB database for information, and an authentication
+      system for editing privileges}
+      \resumeItem{Designed a cohesive user interface for \textbf{50+ pages} by creating and
+      documenting React components in TypeScript}
     \resumeItemListEnd
+
+
+    % Developed an app helping the Emerald Necklace Conservancy inform visitors
+    % about the organization's parks through an interactive, animated full-stack web app. 
+    % 
+    % Enhanced the visitor information portal for the \textbf{1,000,000+
+    % visitors} of the Emerald Necklace Conservancy by designing an full-stack
+    % web app with a tight-knit team 
+    % 
+    % Connected information with MongoDB database protected with
+    %  HTTPAuth for admin to maintain and update page information.
+    % 
+    % Created a secure page modification system for park administration by
+    % maintaining a MongoDB database for information, and an authentication
+    % system for editing privileges
+    % 
+    % Created and documented React components in TypeScript for team to reuse
+    % in building a cohesive user interface across all pages.
+    %
+    % Designed a cohesive user interface for all pages by creating and
+    % documenting React components in TypeScript
+    %
+    %
+    %
 
