--- a/components/experience/thi.tex
+++ b/components/experience/thi.tex
@@ -1,6 +1,6 @@
 \resumeSubheading
-      {Texas Heart Institute}{May 2021 – Aug. 2021}
-      {Visual Communications Intern}{Houston, TX}
+      {Visual Communications Intern}{May 2021 – Aug. 2021}
+      {Texas Heart Institute}{Houston, TX}
       \resumeItemListStart
         \resumeItem{Designed graphics and created animations representing cardiological research for publicity}
         \resumeItem{Interviewed for animation work by the \textit{Houston Chronicle}}
