--- a/components/pl.tex
+++ b/components/pl.tex
@@ -1,16 +1,9 @@
-% skills.tex
-% 
-% 
-% TODO: Add DevOps, GH Actions
-% TODO: Move technical topics to experience and projects
-% Comments: 
-% 
-% 
-% 
-% 
-
 \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
+     \textbf{Programming Languages}{: C/C++, Python, x86-64 Assembly,
+     TypeScript, ReactJS, Node.js} \\
+     \textbf{Tools and Technologies}{: DevOps, Docker, Django, MongoDB, SQL, Tailwind
+     CSS, Figma} \\
     %  \textbf{Frameworks and Environments}{: React, React Native, Node.js, 
     %  MongoDB, Bun} \\
     %  \textbf{Technical Topics}{: Software testing, object-oriented design,
@@ -22,13 +15,5 @@
     %  \textbf{JavaScript APIs}{: Mapping APIs (e.g. MapBox, Maplibre, LeafletJS,
     %  OpenStreetMap, qGIS)} \\
     %  \textbf{Python Modules}{: pandas, matplotlib, sys, select, socket, tz} \\
-     \textbf{Spoken Languages}{: Proficiency in English, Hindi, Spanish, and French} \\
-     \textbf{Media}{: Droneography, Photoshop, Lightroom, After Effects, Davinci Resolve Studio, 
-     Premiere Pro, InDesign, Wordpress} \\
-     \textbf{Travel}{: Hiking mountains, traveling to novel destinations, 
-     searching for amazing flight deals} \\
-     \textbf{Standards}{: Expert in recalling IATA airport codes, ISO country codes, and timezones} \\
-    %  \textbf{Woodworking}{: Prowess using power tools like a saw (miter, table, band) and drill} \\
-     
     }}
 \end{itemize}
