--- a/resume.tex
+++ b/resume.tex
@@ -5,21 +5,27 @@
 \begin{document}
 \input{components/background.tex}
 
-\vspace{-6mm} % For compressing
-\section{Summary}
-\input{components/summary}
+\vspace{-4mm} % For compressing
+% \section{Summary}
+% \input{components/summary}
 
 \vspace{-3mm} % For compressing
 \section{Education}
 
 \input{components/education/tufts.tex}
-\vspace{-9mm} % For compressing
+\vspace{-5mm} % For compressing
+
+\section{Skills}
+\input{components/pl.tex}
+
+\vspace{-7mm} % For compressing
 \section{Experience}
 \resumeSubHeadingListStart
 
       \input{components/experience/cs15-ca}
       \input{components/experience/jumbocode}
       \input{components/experience/asm}
+      \input{components/experience/thi}
 
   \resumeSubHeadingListEnd
 
@@ -38,7 +44,7 @@
     \resumeSubHeadingListEnd
   \vspace{-5mm} % For compressing
 
-\section{Skills and Interests}
+\section{Extracurricular Activities }
 
     \input{components/skills.tex}
 \end{document}
