--- a/components/education/tufts.tex
+++ b/components/education/tufts.tex
@@ -1,8 +1,10 @@
 \resumeSubHeadingListStart
     \resumeSubheading
       {Tufts University}{August 2022 – May 2026}
-      {GPA 3.85, BS Computer Science, BS Mathematics}{Somerville, MA}
-    \resumeSubSubheading{{Relevant Coursework}: Algorithms, Network security,
+    {GPA 3.73, BS Computer Science, BS Mathematics, Dean's List (Fall 2022,
+    Spring 2024)}{Somerville, MA}
+      \resumeSubSubheading{{Relevant Coursework}: Algorithms, Network security,
     Machine structure, Data structures, Multivariable calculus, Linear algebra}{}
-      \resumeSubSubheading{}{}{}{}
+      
+
   \resumeSubHeadingListEnd
