Update some wording

--- a/components/experience/cs15-ca.tex
+++ b/components/experience/cs15-ca.tex
@@ -15,7 +15,7 @@ students' submissions}
  \resumeItem{Graded assignments by studying \textbf{60+ submissions }
  for functionality, testing, and course coding standards}
 
- \resumeItem{Reinforced course objectives during \textbf{1500+ student interactions} by
+ \resumeItem{Reinforced course objectives and debugging principles during \textbf{1500+ student interactions} by
  explaining lecture topics and assignments in office hours}
 % TODO
  \resumeItem{Strengthened understanding of course material weekly for a \textbf{30+ student lab} by delivering comprehensive
