--- a/components/experience/jumbocode.tex
+++ b/components/experience/jumbocode.tex
@@ -14,11 +14,11 @@
 % 
 
 \resumeSubheading
-      {Full Stack Developer}{Sept. 2023 – May. 2024}
+      {Full Stack Developer}{September 2023 -- May 2024}
       {Tufts JumboCode}{Somerville, MA}
       \resumeItemListStart 
-        \resumeItem{Enhanced the visitor information portal for the \textbf{1,000,000+
-        visitors} of the Emerald Necklace Conservancy by designing an full-stack
+        \resumeItem{Enhanced the information display for the \textbf{1,000,000+
+        annual visitors} of the Emerald Necklace Conservancy by designing an full-stack
         web app with a tight-knit team }
       \resumeItem{Created a secure page modification system for park administration by
       maintaining a MongoDB database for information, and an authentication
