--- a/components/experience/thi.tex
+++ b/components/experience/thi.tex
@@ -1,5 +1,5 @@
 \resumeSubheading
-      {Visual Communications Intern}{May 2021 – Aug. 2021}
+      {Visual Communications Intern}{May 2021 -- August 2021}
       {Texas Heart Institute}{Houston, TX}
       \resumeItemListStart
         \resumeItem{Designed graphics and created animations representing cardiological research for publicity}
