--- a/components/education/tufts.tex
+++ b/components/education/tufts.tex
@@ -3,8 +3,8 @@
       {Tufts University}{August 2022 – May 2026}
     {GPA 3.73, BS Computer Science, BS Mathematics, Dean's List (Fall 2022,
     Spring 2024)}{Somerville, MA}
-      \resumeSubSubheading{{Relevant Coursework}: Algorithms, Network security,
-    Machine structure, Data structures, Multivariable calculus, Linear algebra}{}
+      \resumeSubSubheading{{Relevant Coursework}: Algorithms, Data structures, 
+    Machine structure, Network security, Multivariable calculus, Linear algebra}{}
       
 
   \resumeSubHeadingListEnd
