--- a/components/experience/thi.tex
+++ b/components/experience/thi.tex
@@ -3,5 +3,7 @@
       {Texas Heart Institute}{Houston, TX}
       \resumeItemListStart
         \resumeItem{Designed graphics and created animations representing cardiological research for publicity}
-        \resumeItem{Interviewed for animation work by the \textit{Houston Chronicle}}
+      \resumeItem{\href{https://vimeo.com/596132688\#t=1m48s}{\underline{Interviewed for
+      animation work}}
+        by the \textit{Houston Chronicle} }
     \resumeItemListEnd
