Add new for notion

--- a/components/experience/cs15-ca.tex
+++ b/components/experience/cs15-ca.tex
@@ -10,7 +10,7 @@ autograding software, staff software, and assignment solutions}
 students' submissions}
 
 \resumeItem{Developed internal software to organize scoring of submissions between course
- staff}
+ staff using CI/CD pipelines to integrate updates into course infrastructure}
 
  \resumeItem{Graded assignments by studying \textbf{60+ submissions }
  for functionality, testing, and course coding standards}
