--- a/components/experience/jumbocode.tex
+++ b/components/experience/jumbocode.tex
@@ -23,6 +23,9 @@
       \resumeItem{Created a secure page modification system for park administration by
       maintaining a MongoDB database for information, and an authentication
       system for editing privileges}
+      \resumeItem{Automated database maintenance using PyMongo, reducing manual
+      data handling tasks, and speeding up
+      database work \textbf{by 30\%}.}
       \resumeItem{Designed a cohesive user interface for \textbf{50+ pages} by creating and
       documenting React components in TypeScript}
     \resumeItemListEnd
