--- a/components/pl.tex
+++ b/components/pl.tex
@@ -1,8 +1,9 @@
 \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
      \textbf{Programming Languages}{: C/C++, Python, x86-64 Assembly,
-     TypeScript, ReactJS, Node.js} \\
-     \textbf{Tools and Technologies}{: DevOps, Docker, Django, MongoDB, SQL, Tailwind
+     TypeScript, React, Node.js} \\
+     \textbf{Tools and Technologies}{: DevOps, Docker, Django, MongoDB,
+     PostgresSQL, AWS, Tailwind
      CSS, Figma} \\
     %  \textbf{Frameworks and Environments}{: React, React Native, Node.js, 
     %  MongoDB, Bun} \\
