--- a/components/projects/world-clock.tex
+++ b/components/projects/world-clock.tex
@@ -5,5 +5,5 @@
         cities, with a helpful, responsive map to aid in visualization.}
         \resumeItem{Integrated OpenStreetMap and MapBox libraries for graphics.
         APIs were chosen as they best met the scalability requirements.}
-          \resumeItem{Published application to personal website with custom autocomplete search bar and tracked development with Git}
+          \resumeItem{Published application to personal website with custom autocomplete search bar and tracked development with Git.}
           \resumeItemListEnd
