--- a/components/projects/strava-for-flights.tex
+++ b/components/projects/strava-for-flights.tex
@@ -8,10 +8,13 @@
         \resumeItem{Designed a modern, lively frontend with a responsive map,
         menu, and user statistics page using React, Tailwind CSS, and APIs from
         Mapbox and deck.gl}
+        \resumeItem{Unified user interface by \textbf{modeling 50 components} in Figma
+        before development}
         \resumeItem{Displayed \textbf{over 40,000 airports} on map client using
         RESTful APIs to communicate between frontend and backend}
-        \resumeItem{Enhanced airports data by synthesizing several open-source
-        datasets using CRUD applications developed in Python
+        \resumeItem{Enhanced airports data by synthesizing \textbf{20+
+        large-scale, open-source
+        datasets} using CRUD applications developed in Python
     }
         \resumeItem{Hosted backend server by managing a PostgresSQL database
         with a Django application on an AWS EC2 instance}
