add old project

--- a/components/projects/encrypted-im.tex
+++ b/components/projects/encrypted-im.tex
@@ -3,5 +3,5 @@
     \resumeItemListStart
     \resumeItem{Implemented a peer-to-peer encrypted instant messenger using
     the AES-256 CBC cipher, as a
-    practice in network programming and encryption. }
+    practice in socket programming and encryption. }
 \resumeItemListEnd
