--- a/resume.tex
+++ b/resume.tex
@@ -40,7 +40,7 @@
      \input{components/projects/vfl}
      \input{components/projects/ssh-setup}
     %  \input{components/projects/arith}
-    %  \input{components/projects/encrypted-im}
+     \input{components/projects/encrypted-im}
 
     \resumeSubHeadingListEnd
   \vspace{-5mm} % For compressing
