Update strava for flights for new tech

--- a/components/projects/strava-for-flights.tex
+++ b/components/projects/strava-for-flights.tex
@@ -17,5 +17,5 @@
         datasets} using CRUD applications developed in Python
     }
         \resumeItem{Hosted backend server by managing a PostgresSQL database
-        with a Django application on an AWS EC2 instance}
+        within a Docker container on an AWS EC2 instance}
           \resumeItemListEnd
